--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
       - npm test
   build:
     commands:
-      - docker build -t andrewbestbier/ci-comparison-blog .
+      - docker build -t lkissane2020/mysampleapp
   post_build:
     commands:
-      - docker push andrewbestbier/ci-comparison-blog
+      - docker push lkissane2020/mysampleapp
